correction contrast2

--- a/src/sass/components/_buttonstyle.scss
+++ b/src/sass/components/_buttonstyle.scss
@@ -40,7 +40,7 @@
 .form__button:focus,
 .project__button:hover,
 .project__button:focus {
-  background-color: #2980b9; /* Changement de couleur de fond */
+  background-color: #265a7d; /* Changement de couleur de fond */
   box-shadow: 0 8px 15px rgba(0, 0, 0, 0.2); /* Apparition d'une ombre douce */
   transform: translateY(-3px); /* Légère élévation */
 }
