--- a/src/sass/components/_projectgrid.scss
+++ b/src/sass/components/_projectgrid.scss
@@ -79,7 +79,7 @@
     }
 
     &-back {
-      background: #b4b4b4;
+      background: white;
       border-radius: 25px;
       transform: translateY(100%);
       z-index: 1;
